--- a/frontEnd/__index.html
+++ b/frontEnd/__index.html
@@ -7,9 +7,11 @@
     <link href="https://cdn.staticfile.org/KaTeX/0.7.1/katex.min.css" rel="stylesheet" type="text/css" /> 
   </head>
   <body>
+    <div id="loading" style="text-align:center;">
+      <img src="/loading.gif">
+    </div>
     <div id="app"></div>
 
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/prettify/r298/prettify.min.js"></script>
   </body>
 </html>
