--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,6 +5,8 @@
     <!--<link rel="shortcut icon" type="image/x-icon" href="/src/assets/favicon.ico"/>-->
     <title>pcsFE</title>
 
+    <link rel="shortcut icon" href="/favicon.ico">
+
     <link href="/static/loading.css" rel="stylesheet" type="text/css" /> 
     <link href="https://cdn.bootcss.com/KaTeX/0.9.0-alpha1/katex.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/iview/2.4.0/styles/iview.css" rel="stylesheet">
