修改loading,加入webpack externals

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,17 +5,40 @@
     <!--<link rel="shortcut icon" type="image/x-icon" href="/src/assets/favicon.ico"/>-->
     <title>pcsFE</title>
 
-    <!--<link href="/src/assets/github-markdown.css" rel="stylesheet" type="text/css" /> -->
-    <!--<link href="/src/assets/tomorrow-night-eighties.min.css" rel="stylesheet" type="text/css" /> -->
     <link href="https://cdn.staticfile.org/KaTeX/0.7.1/katex.min.css" rel="stylesheet" type="text/css" /> 
+    <link href="/static/loading.css" rel="stylesheet" type="text/css" /> 
   </head>
   <body>
     <div id="loading" style="text-align:center;">
-      <img src="/loading.gif">
+      <div class='loader loader4'>
+        <div>
+          <div>
+            <div>
+              <div>
+                <div>
+                  <div>
+                    <div>
+                      <div>
+                        <div>
+                          <div></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="app"></div>
 
-    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="dist/build.js"></script>
+
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.4.4/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/iview@2.4.0/dist/iview.min.js"></script>
+
+    <!--<script src="dist/build.js"></script>-->
   </body>
 </html>
