--- a/frontEnd/__index.html
+++ b/frontEnd/__index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>pcs系统</title>
 
-    <link href="https://cdn.staticfile.org/KaTeX/0.7.1/katex.min.css" rel="stylesheet" type="text/css" /> 
     <link href="/loading.css" rel="stylesheet" type="text/css" /> 
   </head>
   <body>
@@ -16,6 +15,6 @@
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.4.4/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iview@2.4.0/dist/iview.min.js"></script>
-
+    <script src="https://cdn.bootcss.com/KaTeX/0.9.0-alpha1/katex.min.js"></script>
   </body>
 </html>
