--- a/frontEnd/__index.html
+++ b/frontEnd/__index.html
@@ -5,6 +5,8 @@
     <title>pcs系统</title>
 
     <link href="/loading.css" rel="stylesheet" type="text/css" /> 
+    <link href="https://cdn.bootcss.com/KaTeX/0.9.0-alpha1/katex.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/iview/2.4.0/styles/iview.css" rel="stylesheet">
   </head>
   <body>
     <div id="loading" style="text-align:center;">
