--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -6,30 +6,13 @@
     <title>pcsFE</title>
 
     <link href="/static/loading.css" rel="stylesheet" type="text/css" /> 
+    <link href="https://cdn.bootcss.com/KaTeX/0.9.0-alpha1/katex.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/iview/2.4.0/styles/iview.css" rel="stylesheet">
   </head>
   <body>
     <div id="loading" style="text-align:center;">
       <div class='loader loader4'>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div>
-                  <div>
-                    <div>
-                      <div>
-                        <div>
-                          <div></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+        <div> <div> <div> <div> <div> <div> <div> <div> <div> <div></div> </div> </div> </div> </div> </div> </div> </div> </div> </div> </div>
     </div>
     <div id="app"></div>
 
