--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
 
     <link href="/static/loading.css" rel="stylesheet" type="text/css" /> 
-    <link href="https://cdn.bootcss.com/KaTeX/0.9.0-alpha1/katex.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/KaTeX/0.9.0/katex.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/iview/2.4.0/styles/iview.css" rel="stylesheet">
   </head>
   <body>
@@ -22,7 +22,8 @@
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.4.4/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iview@2.4.0/dist/iview.min.js"></script>
+    <script src="https://cdn.bootcss.com/KaTeX/0.9.0/katex.min.js"></script>
 
-    <!--<script src="dist/build.js"></script>-->
+    <script src="dist/build.js"></script>
   </body>
 </html>
